Update result Refs #60